--- a/client/views/publications/publications-list-main-view/publications-list-main-view.html
+++ b/client/views/publications/publications-list-main-view/publications-list-main-view.html
@@ -1,3 +1,3 @@
 <template name="publicationsListMainView">
-    {{> publicationsList publications=publications showLoadMoreButton=showLoadMoreButton}}
+    {{> publicationsList publications=publications showLoadMoreButton=showLoadMoreButton query=query}}
 </template>
