--- a/client/views/publications/view-publication-main-view/view-publication/view-publication.html
+++ b/client/views/publications/view-publication-main-view/view-publication/view-publication.html
@@ -12,7 +12,15 @@
                         </a>
                         <ul id="settings-dropdown" class="dropdown-content">
                             <li class="edit-publication-button"><a>{{_ "edit"}}</a></li>
-                            <li class="delete-publication-button"><a>{{_ "delete"}}</a></li>
+                            <li class="change-publication-status-button">
+                                <a>
+                                    {{#if publication.isHidden}}
+                                        {{_ "hidePublication"}}
+                                    {{else}}
+                                        {{_ "showPublication"}}
+                                    {{/if}}
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 {{/if}}
@@ -42,7 +50,7 @@
                         <a href="{{getPublPdfUrlFromId publication.pdfId}}"
                            target="_blank">{{_ "bookPdfView"}}</a>
                         (<a href="{{getPublPdfUrlFromId publication.pdfId}}"
-                           target="_blank" download>{{_ "bookPdfDownload"}}</a>)
+                            target="_blank" download>{{_ "bookPdfDownload"}}</a>)
                     </p>
                 </div>
 
@@ -85,14 +93,16 @@
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="col s3">
-                        <button type="button" class="btn btn-muted buy-button">{{_ "buy"}}</button>
+                {{#unless publication.isHidden}}
+                    <div class="row">
+                        <div class="col s3">
+                            <button type="button" class="btn btn-muted buy-button">{{_ "buy"}}</button>
+                        </div>
+                        <div class="col s5">
+                            <p>{{_ "bookPrice"}} {{publication.price}} {{_ "UAH"}}</p>
+                        </div>
                     </div>
-                    <div class="col s5">
-                        <p>{{_ "bookPrice"}} {{publication.price}} {{_ "UAH"}}</p>
-                    </div>
-                </div>
+                {{/unless}}
             </div>
         </div>
     </div>
