--- a/client/views/publications/publications-list-main-view/publications-list/list-item/list-item.html
+++ b/client/views/publications/publications-list-main-view/publications-list/list-item/list-item.html
@@ -47,7 +47,7 @@
             {{#unless publication.isHidden}}
                 <div class="row no-margin-bottom">
                     <div class="col s6">
-                        <a class="waves-effect waves-light btn buy-button">
+                        <a class="waves-effect waves-light btn btn-flat buy-button">
                             <i class="material-icons left">shopping_cart</i>
                             {{_ "buy"}}
                         </a>
