--- a/client/views/publications/publications-list-main-view/publications-list/publications-list.html
+++ b/client/views/publications/publications-list-main-view/publications-list/publications-list.html
@@ -1,19 +1,26 @@
 <template name="publicationsList">
     <div class="publications-list-wrapper">
+        {{#if canUser "createPublication"}}
+            <div class="settings-button-wrapper">
+                <a class="dropdown-button pointer" data-activates="settings-dropdown">
+                    <i class="material-icons">settings</i>
+                </a>
+                <ul id="settings-dropdown" class="dropdown-content">
+                    <li class="edit-publication-button">
+                        <a class="create-publication-button">
+                            {{_ "addNew"}}
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        {{/if}}
+
         <div class="center-align">
             <h4>{{_ "newPublications"}}</h4>
         </div>
 
         {{> publicationsListFilters}}
 
-        {{#if canUser "createPublication"}}
-            <div class="row create-publication-button-wrapper">
-                <a class="waves-effect waves-light btn create-publication-button">
-                    <i class="material-icons left">add</i>
-                    {{_ "addNew"}}
-                </a>
-            </div>
-        {{/if}}
         <div class="row publications-list">
             {{# each publications}}
                 {{> publicationListItem publication=this}}
