filter in orders

--- a/client/views/orders/orders-list-main-view/orders-list/orders-list.html
+++ b/client/views/orders/orders-list-main-view/orders-list/orders-list.html
@@ -1,9 +1,8 @@
 <template name="ordersList">
-    <div class="">
+    <div class="row">
+        {{> ordersListFilters}}
         {{#each orders}}
-            {{>orderListItem
-            order=this
-            }}
+            {{>orderListItem order=this}}
         {{/each}}
     </div>
 </template>
