--- a/client/views/publications/publications-list-main-view/publications-list/list-item/list-item.html
+++ b/client/views/publications/publications-list-main-view/publications-list/list-item/list-item.html
@@ -46,15 +46,11 @@
 
             {{#unless publication.isHidden}}
                 <div class="row no-margin-bottom">
-                    <div class="col s6">
-                        <a class="waves-effect waves-light btn btn-flat buy-button">
-                            <i class="material-icons left">shopping_cart</i>
-                            {{_ "buy"}}
-                        </a>
-                    </div>
-                    <div class="col s6">
-                        <p>{{_ "bookPrice"}} {{publication.price}} {{_ "UAH"}}</p>
-                    </div>
+                    <a class="waves-effect waves-light btn btn-flat buy-button">
+                        <i class="material-icons left">shopping_cart</i>
+                        {{_ "buy"}}
+                    </a>
+                    <a>{{_ "bookPrice"}} {{publication.price}} {{_ "UAH"}}</a>
                 </div>
             {{/unless}}
         </div>
