--- a/client/layouts/main/main-layout.html
+++ b/client/layouts/main/main-layout.html
@@ -4,13 +4,10 @@
             {{> topNavBar}}
         </div>
         <div class="row">
-            <div class="col s12 l10">
+            <div class="col s12">
                 <div class="container">
                     {{> Template.dynamic template=content}}
                 </div>
-            </div>
-            <div class="col l2 hide-on-med-and-down">
-                right news
             </div>
         </div>
     </div>
