--- a/client/views/publications/view-publication-main-view/view-publication/view-publication.html
+++ b/client/views/publications/view-publication-main-view/view-publication/view-publication.html
@@ -95,12 +95,9 @@
 
                 {{#unless publication.isHidden}}
                     <div class="row">
-                        <div class="col s3">
-                            <button type="button" class="btn btn-muted buy-button">{{_ "buy"}}</button>
-                        </div>
-                        <div class="col s5">
-                            <p>{{_ "bookPrice"}} {{publication.price}} {{_ "UAH"}}</p>
-                        </div>
+                        <button type="button" class="btn btn-flat buy-button">
+                            <i class="material-icons left">shopping_cart</i>{{_ "buy"}}</button>
+                        <a>{{_ "bookPrice"}} {{publication.price}} {{_ "UAH"}}</a>
                     </div>
                 {{/unless}}
             </div>
