--- a/client/views/publications/publications-list-main-view/publications-list/publications-list.html
+++ b/client/views/publications/publications-list-main-view/publications-list/publications-list.html
@@ -1,18 +1,7 @@
 <template name="publicationsList">
     <div class="publications-list-wrapper">
         {{#if canUser "createPublication"}}
-            <div class="settings-button-wrapper">
-                <a class="dropdown-button pointer" data-activates="settings-dropdown">
-                    <i class="material-icons">settings</i>
-                </a>
-                <ul id="settings-dropdown" class="dropdown-content">
-                    <li class="edit-publication-button">
-                        <a class="create-publication-button">
-                            {{_ "addNew"}}
-                        </a>
-                    </li>
-                </ul>
-            </div>
+            {{> publicationsListSettingsDropdown}}
         {{/if}}
 
         <div class="center-align">
