--- a/client/views/publications/common/create-edit-publication/create-edit-publication.html
+++ b/client/views/publications/common/create-edit-publication/create-edit-publication.html
@@ -129,7 +129,7 @@
                 {{/if}}
             </div>
 
-            <button type="submit" class="btn btn-default"
+            <button type="submit" class="btn btn-default submit-button"
                     disabled="{{#unless allFieldsIsValid}}disabled{{/unless}}">Submit
             </button>
             <button type="button" class="btn btn-muted cancel-button">Cancel</button>
