--- a/client/views/publications/common/create-edit-publication/create-edit-publication.html
+++ b/client/views/publications/common/create-edit-publication/create-edit-publication.html
@@ -114,7 +114,7 @@
                 <div class="file-field input-field col
                 {{#if pdfDoc64}}s10{{else}}s12{{/if}}">
                     <div class="btn">
-                        <span>{{_ "bookPdf"}}</span>
+                        <span>{{_ "bookPdfView"}}</span>
                         <input type="file" id="pdf" accept="application/pdf"
                                required="{{#unless pdfDoc64}}required{{/unless}}">
                     </div>
