--- a/client/views/publications/publications-list-main-view/publications-list/filters/publications-list-filters.html
+++ b/client/views/publications/publications-list-main-view/publications-list/filters/publications-list-filters.html
@@ -11,11 +11,10 @@
 
             <ul id="sort-by" class="dropdown-content">
                 <li><a id="createdAt">{{_ "publishDate"}}</a></li>
-                <li><a id="title">{{_ "title"}}</a></li>
-                <li><a id="price">{{_ "price"}}</a></li>
-                <li><a id="pagesNumber">{{_ "pagesNumber"}}</a></li>
-                <li><a id="year">{{_ "year"}}</a></li>
-                <!--<li><a id="title">{{_ "title"}}</a></li>-->
+                <li><a id="title">{{_ "bookTitle"}}</a></li>
+                <li><a id="price">{{_ "bookPrice"}}</a></li>
+                <li><a id="pagesNumber">{{_ "bookPagesNumber"}}</a></li>
+                <li><a id="year">{{_ "bookYear"}}</a></li>
             </ul>
 
             <ul id="sort-direction" class="dropdown-content">
