--- a/client/views/orders/orders-list-main-view/orders-list-main-view.html
+++ b/client/views/orders/orders-list-main-view/orders-list-main-view.html
@@ -1,3 +1,3 @@
 <template name="ordersListMainView">
-    {{> ordersList orders=orders}}
+    {{> ordersList orders=orders queryParams=queryParams}}
 </template>
