--- a/client/views/publications/publications-list-main-view/publications-list/list-item/list-item.html
+++ b/client/views/publications/publications-list-main-view/publications-list/list-item/list-item.html
@@ -28,7 +28,7 @@
             <div class="row no-margin-bottom">
                 <p class="no-margin-bottom">
                     <a class="underline-hover" href="{{getPublPdfUrlFromId publication.pdfId}}"
-                       target="_blank">{{_ "bookPdf"}}</a>
+                       target="_blank">{{_ "bookPdfView"}}</a>
                 </p>
             </div>
 
