--- a/client/views/publications/view-publication-main-view/view-publication/view-publication.html
+++ b/client/views/publications/view-publication-main-view/view-publication/view-publication.html
@@ -34,7 +34,7 @@
                 </div>
 
                 <div class="row no-margin-bottom">
-                    <p class="no-margin-bottom">{{publication.pagesNumber}} {{_ "pages"}}</p>
+                    <p class="no-margin-bottom">{{publication.pagesNumber}} {{_ "bookPagesNumber"}}</p>
                 </div>
 
                 {{#if publication.description}}
