--- a/client/views/bucket-main-view/bucket/bucket-item/bucket-item.html
+++ b/client/views/bucket-main-view/bucket/bucket-item/bucket-item.html
@@ -5,7 +5,7 @@
         <p>{{publicationItem.title}}</p>
         <p>{{_ "bookPrice"}}: {{publicationItem.price}}</p>
         <p class="amount-label">{{_ "amount"}}: <input type="number" class="amount" value="{{bucketItem.amount}}" min="1"></p>
-        <p class="total-price">{{_ "total"}}: {{roundPrice totalBucketPositionPrice}}</p>
+        <p class="total-price">{{_ "totalPrice"}}: {{roundPrice totalBucketPositionPrice}}</p>
         <a class="delete-icon secondary-content"><i class="material-icons">delete</i></a>
     </li>
 </template>
