--- a/client/views/orders/order-view-main-view/order-view/order-view.html
+++ b/client/views/orders/order-view-main-view/order-view/order-view.html
@@ -54,7 +54,7 @@
 
         <div class="row">
             {{#if equal order.status "placed"}}
-                <a class="attach-check-button btn">{{_ "attachCheck"}}</a>
+                <a class="attach-check-button btn">{{_ "attachCheckToOrder"}}</a>
             {{/if}}
             {{#if isAdmin}}
                 <a class="confirm-paid-button btn">{{_ "confirmPaid"}}</a>
