--- a/client/views/orders/orders-list-main-view/orders-list/filters/orders-list-filters.html
+++ b/client/views/orders/orders-list-main-view/orders-list/filters/orders-list-filters.html
@@ -7,7 +7,7 @@
             <a class="dropdown-button btn waves-light btn-flat"
                data-activates="sort-direction">{{_ "sortDirection"}}</a>
 
-            <a class="dropdown-button btn waves-light btn-flat" data-activates="status">{{_ "status"}}</a>
+            <a class="dropdown-button btn waves-light btn-flat" data-activates="status">{{_ "orderStatus"}}</a>
 
             <ul id="sort-by" class="dropdown-content">
                 <li><a id="placedAt">{{_ "placedAt"}}</a></li>
