search order by phonenumber

--- a/client/views/orders/orders-list-main-view/orders-list/orders-list.html
+++ b/client/views/orders/orders-list-main-view/orders-list/orders-list.html
@@ -1,5 +1,8 @@
 <template name="ordersList">
     <div class="row">
+        {{#unless currentUser}}
+            {{> findOrderForm}}
+        {{/unless}}
         {{> ordersListFilters}}
         {{#each orders}}
             {{>orderListItem order=this}}
