better view of order list

--- a/client/views/orders/orders-list-main-view/orders-list/orders-list.html
+++ b/client/views/orders/orders-list-main-view/orders-list/orders-list.html
@@ -4,8 +4,10 @@
             {{> findOrderForm}}
         {{/unless}}
         {{> ordersListFilters}}
-        {{#each orders}}
-            {{>orderListItem order=this}}
-        {{/each}}
+        <div class="search-list-container">
+            {{#each orders}}
+                {{>orderListItem order=this}}
+            {{/each}}
+        </div>
     </div>
 </template>
