--- a/client/views/orders/orders-list-main-view/orders-list/order-list-item/order-list-item.html
+++ b/client/views/orders/orders-list-main-view/orders-list/order-list-item/order-list-item.html
@@ -1,12 +1,41 @@
 <template name="orderListItem">
+    <div class="single">
 
+        <div class="left-content">
+            <h2>
+                <a title="" class="card-title pointer
+            underline-hover">{{_ "orderBy"}} {{formatDate order.placedAt "DD.MM.YYYY HH:mm"}}</a>
+            </h2>
+
+            <p>{{_ "totalPrice"}}: {{roundPrice order.totalPrice}}</p>
+
+            <p>{{_ "orderStatus"}}: {{_ order.status}}</p>
+        </div>
+
+        <div class="right-content">
+            <p>{{_ "orderContent"}}:</p>
+            <ol>
+                {{#each order.items}}
+                    {{#with orderItem id}}
+                        <li><a id="{{_id}}"
+                               class="order-item pointer underline-hover">{{title}} x {{../amount}}</a></li>
+                    {{/with}}
+                {{/each}}
+            </ol>
+        </div>
+    </div>
+
+</template>
+
+
+<template name="dog">
     <div class="row">
         <div class="col s12 m6">
             <div class="card blue-grey darken-1">
                 <div class="card-content white-text">
-                    <span class="card-title pointer underline-hover"
-                            >{{_ "order"}} №{{order.orderNumber}}
-                        , {{formatDate order.placedAt "DD.MM.YYYY HH:mm"}}</span>
+    <span class="card-title pointer underline-hover"
+            >{{_ "order"}} №{{order.orderNumber}}
+        , {{formatDate order.placedAt "DD.MM.YYYY HH:mm"}}</span>
 
                     <p>{{_ "totalPrice"}}: {{roundPrice order.totalPrice}}</p>
 
